# vuml

./: CMakeLists.txt
example/: CMakeLists.txt
example/mandelbrot/: main.cc
example/shader/: mandelbrot.comp  shader.comp
example/test/: main.cc
include/vuml/: array.h  device.h  instance.h  logger.h  non_copyable.h  program.h  timestamp.h  traits.h  utils.h  vuml.h
include/vuml/array/: alloc_device.h  basic_array.h  device_array.h  host_array.h  iter.h  properties.h
src/: CMakeLists.txt  device.cc  instance.cc  logger.cc  utils.cc
